--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,18 @@
             "classes/"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "scripts": {
-        "test": "phpunit --colors='always'"
+        "test": "phpunit --colors='always'",
+        "lint": "vendor/bin/phpcs --error-severity=1 --warning-severity=6 --standard=\"phpcs.xml\" ."
     },
     "require-dev": {
-        "phpunit/phpunit": "^7",
-        "sempro/phpunit-pretty-print": "^1.0"
+        "phpunit/phpunit": "^8",
+        "sempro/phpunit-pretty-print": "^1.0",
+        "squizlabs/php_codesniffer": "^3.4"
     }
 }
